--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,10 @@
   .navbar-light .navbar-nav {
     border-top: 1px solid #eeeeee;
   }
+
+  .btn {
+    display: block !important;
+  }
 }
 
 .navbar-light .navbar-brand {
@@ -146,6 +150,10 @@
     opacity: 0;
     visibility: hidden;
     transition: 0.5s;
+  }
+
+  .btn {
+    display: block !important;
   }
 
   .navbar .nav-item:hover .dropdown-menu {
